--- a/website/pages/docs/json/parse.mdx
+++ b/website/pages/docs/json/parse.mdx
@@ -2,55 +2,51 @@ import { Tabs, Tab } from 'nextra-theme-docs'
 
 ## `parse()` functions
 <Tabs items={[
-    <code>typia</code>, 
-    <code>TypeGuardError.ts</code>, 
-    <code>IValidation.ts</code>,
-    <code>Primitive.ts</code>
+  <code>typia</code>, 
+  <code>TypeGuardError.ts</code>, 
+  <code>IValidation.ts</code>,
+  <code>Primitive.ts</code>
 ]}>
-    <Tab>
+  <Tab>
 ```typescript copy
 export namespace json {
-    export function isParse<T>(input: string): Primitive<T> | null;
-    export function assertParse<T>(input: string): Primitive<T>;
-    export function validateParse<T>(
-        input: string
-    ): IValidation<Primitive<T>>;
+  export function isParse<T>(input: string): Primitive<T> | null;
+  export function assertParse<T>(input: string): Primitive<T>;
+  export function validateParse<T>(input: string): IValidation<Primitive<T>>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```typescript copy
 export class TypeGuardError extends Error {
-    public readonly method: string;
-    public readonly path: string | undefined;
-    public readonly expected: string;
-    public readonly value: any;
+  public readonly method: string;
+  public readonly path: string | undefined;
+  public readonly expected: string;
+  public readonly value: any;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```typescript copy
-export type IValidation<T> =
-    | IValidation.ISuccess<T>
-    | IValidation.IFailure;
+export type IValidation<T> = IValidation.ISuccess<T> | IValidation.IFailure;
 export namespace IValidation {
-    export interface ISuccess<T> {
-        success: true;
-        data: T;
-    }
-    export interface IFailure {
-        success: false;
-        errors: IError[];
-    }
-    export interface IError {
-        path: string;
-        expected: string;
-        value: any;
-    }
+  export interface ISuccess<T> {
+    success: true;
+    data: T;
+  }
+  export interface IFailure {
+    success: false;
+    errors: IError[];
+  }
+  export interface IError {
+    path: string;
+    expected: string;
+    value: any;
+  }
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```typescript showLineNumbers copy
 /**
  * Primitive type of JSON.
@@ -78,117 +74,117 @@ export namespace IValidation {
  * `String`                | `string`
  * `Class`                 | `object`
  * `Class` with `toJSON()` | `Primitive<ReturnType<Class.toJSON>>`
- * Native Class            | `{}`
+ * Native Class            | never
  * Others                  | No change
  *
- * @template Instance Target argument type.
+ * @template T Target argument type.
  * @author Jeongho Nam - https://github.com/samchon
  * @author Kyungsu Kang - https://github.com/kakasoo
  * @author Michael - https://github.com/8471919
  */
 export type Primitive<T> = Equal<T, PrimitiveMain<T>> extends true
-    ? T
-    : PrimitiveMain<T>;
+  ? T
+  : PrimitiveMain<T>;
 
 type Equal<X, Y> = X extends Y ? (Y extends X ? true : false) : false;
 
 type PrimitiveMain<Instance> = Instance extends [never]
-    ? never // (special trick for jsonable | null) type
-    : ValueOf<Instance> extends bigint
-    ? never
-    : ValueOf<Instance> extends boolean | number | string
-    ? ValueOf<Instance>
-    : Instance extends Function
-    ? never
-    : ValueOf<Instance> extends object
-    ? Instance extends object
-        ? Instance extends NativeClass
-            ? {}
-            : Instance extends IJsonable<infer Raw>
-            ? ValueOf<Raw> extends object
-                ? Raw extends object
-                    ? PrimitiveObject<Raw> // object would be primitified
-                    : never // cannot be
-                : ValueOf<Raw> // atomic value
-            : PrimitiveObject<Instance> // object would be primitified
-        : never // cannot be
-    : ValueOf<Instance>;
+  ? never // (special trick for jsonable | null) type
+  : ValueOf<Instance> extends bigint
+  ? never
+  : ValueOf<Instance> extends boolean | number | string
+  ? ValueOf<Instance>
+  : Instance extends Function
+  ? never
+  : ValueOf<Instance> extends object
+  ? Instance extends object
+    ? Instance extends NativeClass
+      ? never
+      : Instance extends IJsonable<infer Raw>
+      ? ValueOf<Raw> extends object
+        ? Raw extends object
+          ? PrimitiveObject<Raw> // object would be primitified
+          : never // cannot be
+        : ValueOf<Raw> // atomic value
+      : PrimitiveObject<Instance> // object would be primitified
+    : never // cannot be
+  : ValueOf<Instance>;
 
 type PrimitiveObject<Instance extends object> = Instance extends Array<infer T>
-    ? IsTuple<Instance> extends true
-        ? PrimitiveTuple<Instance>
-        : PrimitiveMain<T>[]
-    : {
-          [P in keyof Instance]: PrimitiveMain<Instance[P]>;
-      };
+  ? IsTuple<Instance> extends true
+    ? PrimitiveTuple<Instance>
+    : PrimitiveMain<T>[]
+  : {
+      [P in keyof Instance]: PrimitiveMain<Instance[P]>;
+    };
 
 type PrimitiveTuple<T extends readonly any[]> = T extends []
-    ? []
-    : T extends [infer F]
-    ? [PrimitiveMain<F>]
-    : T extends [infer F, ...infer Rest extends readonly any[]]
-    ? [PrimitiveMain<F>, ...PrimitiveTuple<Rest>]
-    : T extends [(infer F)?]
-    ? [PrimitiveMain<F>?]
-    : T extends [(infer F)?, ...infer Rest extends readonly any[]]
-    ? [PrimitiveMain<F>?, ...PrimitiveTuple<Rest>]
-    : [];
+  ? []
+  : T extends [infer F]
+  ? [PrimitiveMain<F>]
+  : T extends [infer F, ...infer Rest extends readonly any[]]
+  ? [PrimitiveMain<F>, ...PrimitiveTuple<Rest>]
+  : T extends [(infer F)?]
+  ? [PrimitiveMain<F>?]
+  : T extends [(infer F)?, ...infer Rest extends readonly any[]]
+  ? [PrimitiveMain<F>?, ...PrimitiveTuple<Rest>]
+  : [];
 
 type ValueOf<Instance> = IsValueOf<Instance, Boolean> extends true
-    ? boolean
-    : IsValueOf<Instance, Number> extends true
-    ? number
-    : IsValueOf<Instance, String> extends true
-    ? string
-    : Instance;
+  ? boolean
+  : IsValueOf<Instance, Number> extends true
+  ? number
+  : IsValueOf<Instance, String> extends true
+  ? string
+  : Instance;
 
 type NativeClass =
-    | Set<any>
-    | Map<any, any>
-    | WeakSet<any>
-    | WeakMap<any, any>
-    | Uint8Array
-    | Uint8ClampedArray
-    | Uint16Array
-    | Uint32Array
-    | BigUint64Array
-    | Int8Array
-    | Int16Array
-    | Int32Array
-    | BigInt64Array
-    | Float32Array
-    | Float64Array
-    | ArrayBuffer
-    | SharedArrayBuffer
-    | DataView;
+  | Set<any>
+  | Map<any, any>
+  | WeakSet<any>
+  | WeakMap<any, any>
+  | Uint8Array
+  | Uint8ClampedArray
+  | Uint16Array
+  | Uint32Array
+  | BigUint64Array
+  | Int8Array
+  | Int16Array
+  | Int32Array
+  | BigInt64Array
+  | Float32Array
+  | Float64Array
+  | ArrayBuffer
+  | SharedArrayBuffer
+  | DataView;
 
 type IsTuple<T extends readonly any[] | { length: number }> = [T] extends [
-    never,
+  never,
 ]
+  ? false
+  : T extends readonly any[]
+  ? number extends T["length"]
     ? false
-    : T extends readonly any[]
-    ? number extends T["length"]
-        ? false
-        : true
-    : false;
+    : true
+  : false;
 
 type IsValueOf<Instance, Object extends IValueOf<any>> = Instance extends Object
-    ? Object extends IValueOf<infer U>
-        ? Instance extends U
-            ? false
-            : true // not Primitive, but Object
-        : false // cannot be
-    : false;
+  ? Object extends IValueOf<infer U>
+    ? Instance extends U
+      ? false
+      : true // not Primitive, but Object
+    : false // cannot be
+  : false;
 
 interface IValueOf<T> {
-    valueOf(): T;
+  valueOf(): T;
 }
 
 interface IJsonable<T> {
-    toJSON(): T;
+  toJSON(): T;
 }
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 Type safe JSON parser.
@@ -204,7 +200,7 @@ If you want to know every type error infos detaily, you can use `typia.json.vali
 Look at the below code, then you may understand how the `typia.json.assertParse<T>()` function works.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/assertParse.ts" showLineNumbers
 import typia, { tags } from "typia";
 
@@ -214,172 +210,172 @@ const parsed: IMember = typia.json.assertParse<IMember>(json);
 console.log(json === JSON.stringify(parsed)); // true
 
 interface IMember {
-    id: string & tags.Format<"uuid">;
-    email: string & tags.Format<"email">;
-    age: number 
-        & tags.Type<"uint32"> 
-        & tags.ExclusiveMinimum<19> 
-        & tags.Maximum<100>;
+  id: string & tags.Format<"uuid">;
+  email: string & tags.Format<"email">;
+  age: number &
+    tags.Type<"uint32"> &
+    tags.ExclusiveMinimum<19> &
+    tags.Maximum<100>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/assertParse.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 const typia_1 = __importDefault(require("typia"));
 const json = JSON.stringify(
-    ((generator) => {
-        const $generator = typia_1.default.random.generator;
-        const $ro0 = (_recursive = false, _depth = 0) => ({
-            id:
-                (generator?.customs ?? $generator.customs)?.string?.([
-                    {
-                        name: 'Format<"uuid">',
-                        kind: "format",
-                        value: "uuid",
-                    },
-                ]) ?? (generator?.uuid ?? $generator.uuid)(),
-            email:
-                (generator?.customs ?? $generator.customs)?.string?.([
-                    {
-                        name: 'Format<"email">',
-                        kind: "format",
-                        value: "email",
-                    },
-                ]) ?? (generator?.email ?? $generator.email)(),
-            age:
-                (generator?.customs ?? $generator.customs)?.number?.([
-                    {
-                        name: 'Type<"uint32">',
-                        kind: "type",
-                        value: "uint32",
-                    },
-                    {
-                        name: "ExclusiveMinimum<19>",
-                        kind: "exclusiveMinimum",
-                        value: 19,
-                    },
-                    {
-                        name: "Maximum<100>",
-                        kind: "maximum",
-                        value: 100,
-                    },
-                ]) ?? (generator?.integer ?? $generator.integer)(19, 100),
-        });
-        return $ro0();
-    })(),
+  ((generator) => {
+    const $generator = typia_1.default.random.generator;
+    const $ro0 = (_recursive = false, _depth = 0) => ({
+      id:
+        (generator?.customs ?? $generator.customs)?.string?.([
+          {
+            name: 'Format<"uuid">',
+            kind: "format",
+            value: "uuid",
+          },
+        ]) ?? (generator?.uuid ?? $generator.uuid)(),
+      email:
+        (generator?.customs ?? $generator.customs)?.string?.([
+          {
+            name: 'Format<"email">',
+            kind: "format",
+            value: "email",
+          },
+        ]) ?? (generator?.email ?? $generator.email)(),
+      age:
+        (generator?.customs ?? $generator.customs)?.number?.([
+          {
+            name: 'Type<"uint32">',
+            kind: "type",
+            value: "uint32",
+          },
+          {
+            name: "ExclusiveMinimum<19>",
+            kind: "exclusiveMinimum",
+            value: 19,
+          },
+          {
+            name: "Maximum<100>",
+            kind: "maximum",
+            value: 100,
+          },
+        ]) ?? (generator?.integer ?? $generator.integer)(19, 100),
+    });
+    return $ro0();
+  })(),
 );
 const parsed = ((input) => {
-    const assert = (input) => {
-        const __is = (input) => {
-            return (
-                "object" === typeof input &&
-                null !== input &&
-                "string" === typeof input.id &&
-                /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-                    input.id,
-                ) &&
-                "string" === typeof input.email &&
-                /^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-                    input.email,
-                ) &&
-                "number" === typeof input.age &&
-                Math.floor(input.age) === input.age &&
-                0 <= input.age &&
-                input.age <= 4294967295 &&
-                19 < input.age &&
-                input.age <= 100
-            );
-        };
-        if (false === __is(input))
-            ((input, _path, _exceptionable = true) => {
-                const $guard = typia_1.default.json.assertParse.guard;
-                const $ao0 = (input, _path, _exceptionable = true) =>
-                    (("string" === typeof input.id &&
-                        (/^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-                            input.id,
-                        ) ||
-                            $guard(_exceptionable, {
-                                path: _path + ".id",
-                                expected: 'string & Format<"uuid">',
-                                value: input.id,
-                            }))) ||
-                        $guard(_exceptionable, {
-                            path: _path + ".id",
-                            expected: '(string & Format<"uuid">)',
-                            value: input.id,
-                        })) &&
-                    (("string" === typeof input.email &&
-                        (/^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-                            input.email,
-                        ) ||
-                            $guard(_exceptionable, {
-                                path: _path + ".email",
-                                expected: 'string & Format<"email">',
-                                value: input.email,
-                            }))) ||
-                        $guard(_exceptionable, {
-                            path: _path + ".email",
-                            expected: '(string & Format<"email">)',
-                            value: input.email,
-                        })) &&
-                    (("number" === typeof input.age &&
-                        ((Math.floor(input.age) === input.age &&
-                            0 <= input.age &&
-                            input.age <= 4294967295) ||
-                            $guard(_exceptionable, {
-                                path: _path + ".age",
-                                expected: 'number & Type<"uint32">',
-                                value: input.age,
-                            })) &&
-                        (19 < input.age ||
-                            $guard(_exceptionable, {
-                                path: _path + ".age",
-                                expected: "number & ExclusiveMinimum<19>",
-                                value: input.age,
-                            })) &&
-                        (input.age <= 100 ||
-                            $guard(_exceptionable, {
-                                path: _path + ".age",
-                                expected: "number & Maximum<100>",
-                                value: input.age,
-                            }))) ||
-                        $guard(_exceptionable, {
-                            path: _path + ".age",
-                            expected:
-                                '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-                            value: input.age,
-                        }));
-                return (
-                    ((("object" === typeof input && null !== input) ||
-                        $guard(true, {
-                            path: _path + "",
-                            expected: "IMember",
-                            value: input,
-                        })) &&
-                        $ao0(input, _path + "", true)) ||
-                    $guard(true, {
-                        path: _path + "",
-                        expected: "IMember",
-                        value: input,
-                    })
-                );
-            })(input, "$input", true);
-        return input;
+  const assert = (input) => {
+    const __is = (input) => {
+      return (
+        "object" === typeof input &&
+        null !== input &&
+        "string" === typeof input.id &&
+        /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+          input.id,
+        ) &&
+        "string" === typeof input.email &&
+        /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+          input.email,
+        ) &&
+        "number" === typeof input.age &&
+        Math.floor(input.age) === input.age &&
+        0 <= input.age &&
+        input.age <= 4294967295 &&
+        19 < input.age &&
+        input.age <= 100
+      );
     };
-    input = JSON.parse(input);
-    return assert(input);
+    if (false === __is(input))
+      ((input, _path, _exceptionable = true) => {
+        const $guard = typia_1.default.json.assertParse.guard;
+        const $ao0 = (input, _path, _exceptionable = true) =>
+          (("string" === typeof input.id &&
+            (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+              input.id,
+            ) ||
+              $guard(_exceptionable, {
+                path: _path + ".id",
+                expected: 'string & Format<"uuid">',
+                value: input.id,
+              }))) ||
+            $guard(_exceptionable, {
+              path: _path + ".id",
+              expected: '(string & Format<"uuid">)',
+              value: input.id,
+            })) &&
+          (("string" === typeof input.email &&
+            (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+              input.email,
+            ) ||
+              $guard(_exceptionable, {
+                path: _path + ".email",
+                expected: 'string & Format<"email">',
+                value: input.email,
+              }))) ||
+            $guard(_exceptionable, {
+              path: _path + ".email",
+              expected: '(string & Format<"email">)',
+              value: input.email,
+            })) &&
+          (("number" === typeof input.age &&
+            ((Math.floor(input.age) === input.age &&
+              0 <= input.age &&
+              input.age <= 4294967295) ||
+              $guard(_exceptionable, {
+                path: _path + ".age",
+                expected: 'number & Type<"uint32">',
+                value: input.age,
+              })) &&
+            (19 < input.age ||
+              $guard(_exceptionable, {
+                path: _path + ".age",
+                expected: "number & ExclusiveMinimum<19>",
+                value: input.age,
+              })) &&
+            (input.age <= 100 ||
+              $guard(_exceptionable, {
+                path: _path + ".age",
+                expected: "number & Maximum<100>",
+                value: input.age,
+              }))) ||
+            $guard(_exceptionable, {
+              path: _path + ".age",
+              expected:
+                '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+              value: input.age,
+            }));
+        return (
+          ((("object" === typeof input && null !== input) ||
+            $guard(true, {
+              path: _path + "",
+              expected: "IMember",
+              value: input,
+            })) &&
+            $ao0(input, _path + "", true)) ||
+          $guard(true, {
+            path: _path + "",
+            expected: "IMember",
+            value: input,
+          })
+        );
+      })(input, "$input", true);
+    return input;
+  };
+  input = JSON.parse(input);
+  return assert(input);
 })(json);
 console.log(json === JSON.stringify(parsed)); // true
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```typescript showLineNumbers copy
 /**
  * Primitive type of JSON.
@@ -407,117 +403,117 @@ console.log(json === JSON.stringify(parsed)); // true
  * `String`                | `string`
  * `Class`                 | `object`
  * `Class` with `toJSON()` | `Primitive<ReturnType<Class.toJSON>>`
- * Native Class            | `{}`
+ * Native Class            | never
  * Others                  | No change
  *
- * @template Instance Target argument type.
+ * @template T Target argument type.
  * @author Jeongho Nam - https://github.com/samchon
  * @author Kyungsu Kang - https://github.com/kakasoo
  * @author Michael - https://github.com/8471919
  */
 export type Primitive<T> = Equal<T, PrimitiveMain<T>> extends true
-    ? T
-    : PrimitiveMain<T>;
+  ? T
+  : PrimitiveMain<T>;
 
 type Equal<X, Y> = X extends Y ? (Y extends X ? true : false) : false;
 
 type PrimitiveMain<Instance> = Instance extends [never]
-    ? never // (special trick for jsonable | null) type
-    : ValueOf<Instance> extends bigint
-    ? never
-    : ValueOf<Instance> extends boolean | number | string
-    ? ValueOf<Instance>
-    : Instance extends Function
-    ? never
-    : ValueOf<Instance> extends object
-    ? Instance extends object
-        ? Instance extends NativeClass
-            ? {}
-            : Instance extends IJsonable<infer Raw>
-            ? ValueOf<Raw> extends object
-                ? Raw extends object
-                    ? PrimitiveObject<Raw> // object would be primitified
-                    : never // cannot be
-                : ValueOf<Raw> // atomic value
-            : PrimitiveObject<Instance> // object would be primitified
-        : never // cannot be
-    : ValueOf<Instance>;
+  ? never // (special trick for jsonable | null) type
+  : ValueOf<Instance> extends bigint
+  ? never
+  : ValueOf<Instance> extends boolean | number | string
+  ? ValueOf<Instance>
+  : Instance extends Function
+  ? never
+  : ValueOf<Instance> extends object
+  ? Instance extends object
+    ? Instance extends NativeClass
+      ? never
+      : Instance extends IJsonable<infer Raw>
+      ? ValueOf<Raw> extends object
+        ? Raw extends object
+          ? PrimitiveObject<Raw> // object would be primitified
+          : never // cannot be
+        : ValueOf<Raw> // atomic value
+      : PrimitiveObject<Instance> // object would be primitified
+    : never // cannot be
+  : ValueOf<Instance>;
 
 type PrimitiveObject<Instance extends object> = Instance extends Array<infer T>
-    ? IsTuple<Instance> extends true
-        ? PrimitiveTuple<Instance>
-        : PrimitiveMain<T>[]
-    : {
-          [P in keyof Instance]: PrimitiveMain<Instance[P]>;
-      };
+  ? IsTuple<Instance> extends true
+    ? PrimitiveTuple<Instance>
+    : PrimitiveMain<T>[]
+  : {
+      [P in keyof Instance]: PrimitiveMain<Instance[P]>;
+    };
 
 type PrimitiveTuple<T extends readonly any[]> = T extends []
-    ? []
-    : T extends [infer F]
-    ? [PrimitiveMain<F>]
-    : T extends [infer F, ...infer Rest extends readonly any[]]
-    ? [PrimitiveMain<F>, ...PrimitiveTuple<Rest>]
-    : T extends [(infer F)?]
-    ? [PrimitiveMain<F>?]
-    : T extends [(infer F)?, ...infer Rest extends readonly any[]]
-    ? [PrimitiveMain<F>?, ...PrimitiveTuple<Rest>]
-    : [];
+  ? []
+  : T extends [infer F]
+  ? [PrimitiveMain<F>]
+  : T extends [infer F, ...infer Rest extends readonly any[]]
+  ? [PrimitiveMain<F>, ...PrimitiveTuple<Rest>]
+  : T extends [(infer F)?]
+  ? [PrimitiveMain<F>?]
+  : T extends [(infer F)?, ...infer Rest extends readonly any[]]
+  ? [PrimitiveMain<F>?, ...PrimitiveTuple<Rest>]
+  : [];
 
 type ValueOf<Instance> = IsValueOf<Instance, Boolean> extends true
-    ? boolean
-    : IsValueOf<Instance, Number> extends true
-    ? number
-    : IsValueOf<Instance, String> extends true
-    ? string
-    : Instance;
+  ? boolean
+  : IsValueOf<Instance, Number> extends true
+  ? number
+  : IsValueOf<Instance, String> extends true
+  ? string
+  : Instance;
 
 type NativeClass =
-    | Set<any>
-    | Map<any, any>
-    | WeakSet<any>
-    | WeakMap<any, any>
-    | Uint8Array
-    | Uint8ClampedArray
-    | Uint16Array
-    | Uint32Array
-    | BigUint64Array
-    | Int8Array
-    | Int16Array
-    | Int32Array
-    | BigInt64Array
-    | Float32Array
-    | Float64Array
-    | ArrayBuffer
-    | SharedArrayBuffer
-    | DataView;
+  | Set<any>
+  | Map<any, any>
+  | WeakSet<any>
+  | WeakMap<any, any>
+  | Uint8Array
+  | Uint8ClampedArray
+  | Uint16Array
+  | Uint32Array
+  | BigUint64Array
+  | Int8Array
+  | Int16Array
+  | Int32Array
+  | BigInt64Array
+  | Float32Array
+  | Float64Array
+  | ArrayBuffer
+  | SharedArrayBuffer
+  | DataView;
 
 type IsTuple<T extends readonly any[] | { length: number }> = [T] extends [
-    never,
+  never,
 ]
+  ? false
+  : T extends readonly any[]
+  ? number extends T["length"]
     ? false
-    : T extends readonly any[]
-    ? number extends T["length"]
-        ? false
-        : true
-    : false;
+    : true
+  : false;
 
 type IsValueOf<Instance, Object extends IValueOf<any>> = Instance extends Object
-    ? Object extends IValueOf<infer U>
-        ? Instance extends U
-            ? false
-            : true // not Primitive, but Object
-        : false // cannot be
-    : false;
+  ? Object extends IValueOf<infer U>
+    ? Instance extends U
+      ? false
+      : true // not Primitive, but Object
+    : false // cannot be
+  : false;
 
 interface IValueOf<T> {
-    valueOf(): T;
+  valueOf(): T;
 }
 
 interface IJsonable<T> {
-    toJSON(): T;
+  toJSON(): T;
 }
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 
@@ -525,58 +521,52 @@ interface IJsonable<T> {
 
 ## Reusable functions
 <Tabs items={[
-    <code>typia</code>, 
-    <code>TypeGuardError.ts</code>, 
-    <code>IValidation.ts</code>,
-    <code>Primitive.ts</code>
+  <code>typia</code>, 
+  <code>TypeGuardError.ts</code>, 
+  <code>IValidation.ts</code>,
+  <code>Primitive.ts</code>
 ]}>
-    <Tab>
+  <Tab>
 ```typescript copy
 export namespace json {
-    export function createIsParse<T>(): (
-        input: string
-    ) => Primitive<T> | null;
-    export function createAssertParse<T>(): (
-        input: string
-    ) => Primitive<T>;
-    export function createValidateParse<T>(): (
-        input: string
-    ) => IValidation<Primitive<T>>;
+  export function createIsParse<T>(): (input: string) => Primitive<T> | null;
+  export function createAssertParse<T>(): (input: string) => Primitive<T>;
+  export function createValidateParse<T>(): (
+    input: string,
+  ) => IValidation<Primitive<T>>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```typescript copy
 export class TypeGuardError extends Error {
-    public readonly method: string;
-    public readonly path: string | undefined;
-    public readonly expected: string;
-    public readonly value: any;
+  public readonly method: string;
+  public readonly path: string | undefined;
+  public readonly expected: string;
+  public readonly value: any;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```typescript copy
-export type IValidation<T> =
-    | IValidation.ISuccess<T>
-    | IValidation.IFailure;
+export type IValidation<T> = IValidation.ISuccess<T> | IValidation.IFailure;
 export namespace IValidation {
-    export interface ISuccess<T> {
-        success: true;
-        data: T;
-    }
-    export interface IFailure {
-        success: false;
-        errors: IError[];
-    }
-    export interface IError {
-        path: string;
-        expected: string;
-        value: any;
-    }
+  export interface ISuccess<T> {
+    success: true;
+    data: T;
+  }
+  export interface IFailure {
+    success: false;
+    errors: IError[];
+  }
+  export interface IError {
+    path: string;
+    expected: string;
+    value: any;
+  }
 }
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 Reusable `typia.json.isParse<T>()` function generators.
@@ -586,58 +576,58 @@ If you repeat to call `typia.json.isParse<T>()` function on the same type, size 
 Just look at the code below, then you may understand how to use it.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
-    <Tab>
+  <Tab>
 ```typescript copy filename="examples/src/createIsParse.ts" showLineNumbers
 import typia, { tags } from "typia";
 
 export const parseMember = typia.json.createIsParse<IMember>();
 
 interface IMember {
-    id: string & tags.Format<"uuid">;
-    email: string & tags.Format<"email">;
-    age: number 
-        & tags.Type<"uint32"> 
-        & tags.ExclusiveMinimum<19> 
-        & tags.Maximum<100>;
+  id: string & tags.Format<"uuid">;
+  email: string & tags.Format<"email">;
+  age: number &
+    tags.Type<"uint32"> &
+    tags.ExclusiveMinimum<19> &
+    tags.Maximum<100>;
 }
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```javascript filename="examples/bin/createIsParse.js" showLineNumbers
 "use strict";
 var __importDefault =
-    (this && this.__importDefault) ||
-    function (mod) {
-        return mod && mod.__esModule ? mod : { default: mod };
-    };
+  (this && this.__importDefault) ||
+  function (mod) {
+    return mod && mod.__esModule ? mod : { default: mod };
+  };
 Object.defineProperty(exports, "__esModule", { value: true });
 exports.parseMember = void 0;
 const typia_1 = __importDefault(require("typia"));
 const parseMember = (input) => {
-    const is = (input) => {
-        return (
-            "object" === typeof input &&
-            null !== input &&
-            "string" === typeof input.id &&
-            /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
-                input.id,
-            ) &&
-            "string" === typeof input.email &&
-            /^(([^<>()[].,;:s@"]+(.[^<>()[].,;:s@"]+)*)|(".+"))@(([^<>()[].,;:s@"]+.)+[^<>()[].,;:s@"]{2,})$/i.test(
-                input.email,
-            ) &&
-            "number" === typeof input.age &&
-            Math.floor(input.age) === input.age &&
-            0 <= input.age &&
-            input.age <= 4294967295 &&
-            19 < input.age &&
-            input.age <= 100
-        );
-    };
-    input = JSON.parse(input);
-    return is(input) ? input : null;
+  const is = (input) => {
+    return (
+      "object" === typeof input &&
+      null !== input &&
+      "string" === typeof input.id &&
+      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+        input.id,
+      ) &&
+      "string" === typeof input.email &&
+      /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+        input.email,
+      ) &&
+      "number" === typeof input.age &&
+      Math.floor(input.age) === input.age &&
+      0 <= input.age &&
+      input.age <= 4294967295 &&
+      19 < input.age &&
+      input.age <= 100
+    );
+  };
+  input = JSON.parse(input);
+  return is(input) ? input : null;
 };
 exports.parseMember = parseMember;
 ```
-    </Tab>
+  </Tab>
 </Tabs>
